<resources>
    <string name="app_name">Shopmall1805</string>
    <string name="typefragmentRadioButton1">分类</string>
    <string name="typefragmentRadioButton2">标签</string>
    <string name="fenhot">热卖</string>
    <string name="fenchang">常用</string>
    <string name="xiangqing">商品详情</string>
    <string name="xqtextview">预售截止10月15日，预售期为限量礼盒版，包括特制木盒x1、画集x1、邮票x1套、书签×1、贴纸×1、信封×1、礼盒特</string>
    <string name="fahuo">由硅谷发货</string>
    <string name="fukuan">付款方式</string>
    <string name="tishi">提示∶普通商品享有质量问题7天退货，签收后3个工作日内可换货。其他特殊商品(如手办)的售后以页面说明为准</string>
    <string name="lian">联系人</string>
    <string name="shoucang">收藏</string>
    <string name="gouwuche">购物车</string>
    <string name="jiache">加入购物车</string>
    <string name="edtext">请输入</string>
    <string name="fisettext">消息</string>
    <string name="hottext">这里都是买的棒棒哒</string>
    <string name="hottext2">查看更多</string>
    <string name="recommendtext">新品推荐</string>
    <string name="recommendtext2">查看更多</string>
    <string name="seckilltext">今日闪购 距·结束</string>
    <string name="seckilltext2">00:00:00</string>
    <string name="commontext">全款预售【喵鹿酱】樱桃蜜语 毛呢绣花 小高腰半裙</string>
    <string name="commontext2">￥88.00</string>
    <string name="itemhottext">【智趣屋】DIY小屋盒子剧场 手工拼装房子 模型玩具创意礼品 送工具</string>
    <string name="myfragmenttext">登录/注册</string>
    <string name="myfragmenttext2">我的订单</string>
    <string name="myfragmenttext3">查看全部订单</string>
    <string name="myfragmenttext4">待付款</string>
    <string name="myfragmenttext5">待发货</string>
    <string name="myfragmenttext6">待收获</string>
    <string name="myfragmenttext7">已完成</string>
    <string name="myfragmenttext8">售后/退款</string>
    <string name="myfragmenttext9">收货地址</string>
    <string name="myfragmenttext10">我的收藏</string>
    <string name="myfragmenttext11">我的优惠券</string>
    <string name="myfragmenttext12">我的瓜子</string>
    <string name="myfragmenttext13">我的奖品</string>
    <string name="myfragmenttext14">我的电子票</string>
    <string name="myfragmenttext15">邀请分享</string>
    <string name="myfragmenttext16">客服中心</string>
    <string name="myfragmenttext17">服务反馈</string>
    <string name="myfragmenttext18">个人中心</string>

    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="permission_already_granted">Required permissions have already been granted to AlipaySDK</string>
    <string name="permission_rejected">Missing permissions. Please grant required permissions in system settings</string>
    <string name="permission_granted">Required permissions have been granted to AlipaySDK</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
</resources>
